cyphercore/static/cyphercore/css/custom.css
body {
    font-size: 1.5em;
    line-height: 1.5;
    margin-bottom: 5rem;
    margin-top: 3rem;
}

h1, h2, h3, h4, h5, h6 {
    font-weight: bold;
    margin-bottom: 1.6rem;
}

h1 {
    font-size: 2.5rem;
    line-height: 1;
    letter-spacing: -.1rem;
    margin-top: 1rem;
    color: darkred;
}

h2 {
    color: darkred;
    font-size: 1.8rem;
    line-height: 1;
    letter-spacing: -.1rem;
    margin-bottom: 1rem;
}

h3 {
    font-size: 1.6rem;
    line-height: 1;
    letter-spacing: -.1rem;
    margin-bottom: 1rem;
    margin-top: 1.5rem;
}

h4 {
    font-size: 1.6rem;
    line-height: 1;
    letter-spacing: -.08rem;
}

h5 {
    font-size: 1.6rem;
    line-height: 1;
    letter-spacing: -.05rem;
}

h6 {
    font-size: 1.6rem;
    line-height: 1;
    letter-spacing: 0;
}

a {
    color: #666;
}

a:hover {
    color: #aaa;
}

br {
    margin-bottom: 1.2rem;
}

hr {
    border-top: 1px solid #ccc;
    margin-top: 1rem;
    margin-bottom: 1rem;
}

ul {
    padding-left: 2rem;
}

.breadcrumbs {
    font-size: 1.5rem;
    font-variant: small-caps;
}

.character-background {
    padding-right: 5%;
}

.character-portrait {
    border: solid 2px #000;
    border-radius: 4px;
    display: block;
    max-width: 100%;
    margin-top: .5rem;
}

.character-sentence {
    margin-top: -1.5rem;
}

.indent {
    padding: 0 5%;
}

.inability {
    font-style: italic;
}

.breakbefore {
    page-break-before: always;
}

.breakafter {
    page-break-after: always;
}

.highlighted {
    color: #fff;
    background-color: #c51313;
}

.row-odd {
    background-color: #eee;
}

.bubble-item {
    background-color: lightgray;
    border: 1px solid black;
    border-radius: 3px;
    line-height: 3.3rem;
    margin: 0 .5rem;
    padding: .3rem 1.5rem;
    white-space: nowrap;
}

.skill-i {
    font-style: italic;
}

.skill-t {
}

.skill-s {
    font-weight: bold;
}

.strikethrough {
    text-decoration: line-through;
}

@media print {
    section {
        break-inside: avoid;
    }
    .breadcrumbs {
        display: none;
    }
    .compact {
        font-size: smaller;
    }
    .no-print {
        display: none;
    }
    .row {
        page-break-inside: avoid;
    }
}

@media screen {
    .container {
        margin-bottom: 1em;
    }
}

